--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
     "scripts": ["background.js"]
   },
   "permissions": [
-    "activeTab"
+    "activeTab",
+    "tabs"
   ],
   "browser_action": {
     "default_popup": "popup.html"
