--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,8 @@
     "activeTab"
   ],
   "browser_action": {
-    "default_popup": "popup.html"
+    "default_popup": "popup.html",
+    "default_icon": "images/icon.png"
   },
   "content_scripts": [
     {
@@ -21,5 +22,11 @@
       ],
       "js": ["scripts/scrape-amazon.js"]
     }
-  ]
+  ],
+  "icons": {
+    "16": "images/icon.png",
+    "32": "images/icon.png",
+    "48": "images/icon.png",
+    "128": "images/icon.png"
+  }
 }
